# ParaJax

./: .gitignore  README.md  pyproject.toml
examples/: 00_dahlquist_data.py  00_dahlquist_parajax.py  00_naive_neural_ode.py  00_pendulums_data.py  01_naive_neural_ode.py  02_pydmd.py
examples/dahlquist/: 00_dahlquist_data.py  01_dahlquist_parajax_physics.py  02_dahlquist_parajax.py
examples/dahlquist/data/: 01_naive_neural_ode.ipynb  01_naive_neural_ode_SUM.ipynb  01_naive_neural_ode_SUM_BIGGER.ipynb  02_dahlquist_parajax.ipynb
examples/lotka-voltera/: lotka-voltara.py
examples/pendulums/: 00_pendulums_data.py  01_pendulums_pydmd.py  02_pendulums_parajax.py
examples/pendulums/data/: 02_pendulums_parajax.ipynb  02_pendulums_parajax2.ipynb  02_pendulums_parajax3.ipynb  model_003.json
parajax/: utils.py
